@@ -1,5 +1,5 @@
 /*
- * Copyright 1999 by Albert Cahalan; all rights resered.
+ * Copyright 1999-2002 by Albert Cahalan; all rights reserved.
  *
  * This file may be used subject to the terms and conditions of the
  * GNU Library General Public License Version 2, or any later version
